--- a/css/theme.css
+++ b/css/theme.css
@@ -8279,6 +8279,7 @@ margin-top: 10px;
 	padding-top:13%;
 	padding-right:15%;
 	padding-left:15%;
+  text-align: left !important;
 	
 }
 .filterbooth-content-slide h1 {
